# tetmag

./: .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  mkdocs.yml
License/: shortLicense.txt
doc/: conf.py  index.rst
doc/examples/: example1.rst  example2.rst  example3.rst  example4.rst
doc/figs/example2/: mx_140ps.pvsm
doc/issues/: compile.rst
doc/usage/: installation.rst  quickstart.rst
doc/usage/figs/: .~lock.freecad_cyl1.odp#  freecad_cyl1.odp
examples/example1/: README.txt  plot_energies.r  simulation.cfg
examples/example2/: README.txt  simulation.cfg_dyn  simulation.cfg_static  sp4_.vtk
examples/example2/mesh_3nm/: sp4_.FCStd
examples/example3/: README.txt  simulation.cfg_dynamic  simulation.cfg_static  sp_stt.FCStd  sp_stt.vtk
examples/example4/: README.txt  cyl.geo  simulation.cfg
examples/simple_cube/: cube.msh  simulation.cfg
gpu/: CMakeLists.txt  EffFieldGPU.cu  EffFieldGPU.h  GPUSolver.cu  GPUSolver.h  GpuPotential.cu  GpuPotential.h  LLGWrapper.cu  LLGWrapper.h  SetDevice.cu  SetDevice.h  SpMatCUDA.cu  SpMatCUDA.h  useCUDA.h
io/: GMSHReader.cpp  GMSHReader.h  MaterialReader.cpp  MaterialReader.h  MeshReaderInterface.cpp  MeshReaderInterface.h  MeshWriter.cpp  MeshWriter.h  VTKReader.cpp  VTKReader.h
main/: .gitignore  AMGCLSolver.cpp  AMGCLSolver.h  DemagField.cpp  DemagField.h  EffFieldCalc.cpp  EffFieldCalc.h  SolverFactory.cpp  SolverFactory.h  TheLLG.cpp  TheLLG.h  TheSimulation.cpp  TheSimulation.h  h2interface.c  h2interface.h  tetmag.cpp  tetmag.cpp~  tetmagVersion.h  tetmagVersion.h.in
preproc/: BEMprocessing.cpp  BEMprocessing.h  BEProperties.cpp  BEProperties.h  Boundary.cpp  Boundary.h  FEMprocessing.cpp  FEMprocessing.h  Lindholm.cpp  Lindholm.h  LindholmCWrapper.cpp  LindholmCWrapper.h
resources/: CMakeLists.txt  CMakeLists.txt~  tetmag.desktop  tetmag.desktop~
specs/: Hysteresis.cpp  Hysteresis.h  InitMag.cpp  InitMag.h  Materials.cpp  Materials.h  MeshData.cpp  MeshData.h  ProgramSpecs.cpp  ProgramSpecs.h  SimulationData.cpp  SimulationData.h
tetmag_doc/: equations.md  index.md  installation.md  tutorial.md
tetmag_doc/bib/: hertel09.bib  hertel16.bib
utils/: PhysicalConstants.cpp  PhysicalConstants.h  ProcessInformation.cpp  ProcessInformation.h  Timer.cpp  Timer.h  auxiliaries.cpp  auxiliaries.cpp~  auxiliaries.h  auxiliaries.h~  typedefs.h
